trace pinned threads